# ai-tasks-board

./: .gitignore  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
agent/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
agent/memory/: README.md
agent/prompts/: README.md  agent.ask.v1.md  board.agent.apply.v1.md  board.propose.v1.md  board.split.v1.md  sessions.codex.match_task.v1.md  sessions.codex.summarize.v1.md
obsidian-plugin/: esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  versions.json
obsidian-plugin/src/: ai_log.ts  board.test.ts  board.ts  board_fs.ts  board_note_overlay.ts  board_panel.ts  bulk_import_modal.ts  debug_view.ts  diagnostics_modal.ts  draft_modal.ts  i18n.test.ts  i18n.ts  main.ts  runtime_http.ts  settings.ts  task_edit_modal.ts  types.ts  view.ts
runtime/: pyinstaller_entrypoint.py  pyproject.toml
runtime/src/ai_tasks_runtime/: __init__.py  agent_heartbeat.py  agent_workspace.py  agno_agent.py  app.py  board_md.py  cli.py  codex_cli.py  config.py  logging_setup.py  prompts.py
runtime/src/ai_tasks_runtime/agno_models/: __init__.py  codex_cli_model.py
runtime/src/ai_tasks_runtime/sessions/: __init__.py  codex.py  state.py
runtime/src/ai_tasks_runtime/tools/: __init__.py  board_toolkit.py
runtime/tests/: test_sessions_matching.py
scripts/: ai_tasks_board_bump_version.py
