[project]
name = "ai-tasks-runtime"
version = "0.1.4"
description = "Local runtime for AI Tasks Board (Agno + FastAPI), including codex-cli model provider."
requires-python = ">=3.12"
dependencies = [
  "agno==2.5.4",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.0.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.27.0",
]

[project.scripts]
ai-tasks-runtime = "ai_tasks_runtime.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
